# aws-python-boto-tools

./: .gitignore  Makefile  README.md  README_sqs_send_batch.md  README_sts_assume_role.md  pyproject.toml
.github/workflows/: ci.yml
src/: sqs_batch_send.py  sts_assume_role.py
src/aws_python_boto_tools/aws_tools.egg-info/: requires.txt
src/aws_tools.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_sqs_batch_send.py  test_sts_assume_role.py
