# General

[project]
name = "aws-python-boto-tools"
dynamic = ["version"]
description = "Utilities for SQS batch, STS assume-role cache, and CloudWatch logging"
readme = "README.md"
license-files = ["LICENSE", "LICENSE-human.txt"]
requires-python = ">=3.10"
license = "CC-BY-SA-4.0"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Systems Administration",
]
keywords = [
  "aws",
  "boto3",
  "sqs",
  "sts",
  "aws-sdk",
]


dependencies = [
  "boto3",
]

[project.optional-dependencies]
testing = [
  "black",
  "coverage",
  "moto[sqs]",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-mock",
]
build = [
  "setuptools",
  "setuptools-scm",
  "wheel",
]

[project.urls]
Homepage = "https://github.com/satyap/aws-python-boto-tools.git"

[project.scripts]

# Build

[build-system]
# Build system configuration (PEP 518)
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

# Tools

[tool.black]
line-length = 120
target-version = ["py310"]
exclude = '''
/(
  | \.git
  | __pycache__
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 75
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

